test/should_pass/hom_001.grg
actions hom_001;

rule r {
	pattern {
		x:Node -e:Edge-> y:Node --> z:Node;
		hom(x, y);
	}
	replace {
		x <-:Edge- y <-- z;
	}
}

