test/should_fail/ret_004.grg
actions ret_004;

rule r : (Node, Node) {
	pattern {
		x: Node;
		y: Node;
	}
	replace {
		return(x, a);
	}
}

